--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Verify Your Account</h1>
+        <p>we emailed you the six digit code to cool_guy@gmail.com <br>
+            Enter the code below to coinfirm your email address 
 
+        </p>
+        <div class="code.container">
+            <input type="number" class="code" placeholder="0" min="0" max="9"  required >
+            <input type="number" class="code" placeholder="0" min="0" max="9"  required >
+            <input type="number" class="code" placeholder="0" min="0" max="9"  required >
+            <input type="number" class="code" placeholder="0" min="0" max="9"  required >
+            <input type="number" class="code" placeholder="0" min="0" max="9"  required >
+            <input type="number" class="code" placeholder="0" min="0" max="9"  required >
+        </div>
+        
+
+        <div class="info">
+            <p>
+                This is design only. We did'n actually send you an email as we <br>don't have your email, right?
+            </p>
+
+        </div>
+
+    </div>
+</body>
+</html>
